0.2:
- Moved initialisation of _MemorySem to memInit - SvdB
- Planet scan is now cleared correctly, from l0ci
- Flagship modules are now drawn correctly instead of one pix left, from l0ci
- Planet code fixes, from PhracturedBlue
- Build fixes for FreeBSD, from Max Horn.
- Fixed typo in Thraddash text, from Dan Plimak.
- Make HMalloc abort when no memory available, from Abaddon.
- Replace malloc() calls by HMalloc, from Abaddon.
- #include <SDL.h> in main program, for OSX, from Max Horn.
- Use sources for getopt() for all systems that don't support it, not only
  for Windows, from Max Horn.
- Planet code cleanups, from PhracturedBlue
- Changed some types to SDLKey in input.c to prevent overflows, from tamlin
- Slider now moves in communications (OpenAL)
- Fixed a DCQ bug where it wasn't freeing batches of graphics commands
- > vs. >= bugfix on plangen.c, from PhracturedBlue
- More appropriate names to ROSTER + 1 and ROSTER + 2, from slayne
- Lines and colouring of planet surface when scanning, from PhracturedBlue
- Melnorme bridge turns purple at the right spot in his conversation
- Repaired a DrawCommandQueue invariant, from tamlin
- Color transforms in communication merged into core animation thread
- 3D planet is now antialiased, from PhracturedBlue
- Hyperspace saving crash introduced by prev. patches fixed, from slayne
- Precursor ship crew count is now placed correctly in melee, from wjp
- Dialog choices doesn't go off rectangle in right anymore, from wjp
- When saving in planet scan screen, screen is now redrawn, from slayne
- Commas causing pixels to appear in planetary reports fixed, from slayne
- Team names switching when selecting next ship to fight fixed, from slayne
- More memory leak fixes in 3do_getbody.c, from PhracturedBlue
- Fixed memory leak in _ReleaseCelData, from PhracturedBlue.
- Fixed mutex deadlock in 3do_blt.c, from tamlin
- 'additional credits' amount for Melnorme correct now, by Windplume.